attached_assets/Pasted-client-495-vite-connecting-client-618-vite-connected-chunk-RPCDYKBN-js-v-e2d56fd9-21551-Down-1756129234482_1756129234483.txt
client:495 [vite] connecting...
client:618 [vite] connected.
chunk-RPCDYKBN.js?v=e2d56fd9:21551 Download the React DevTools for a better development experience: https://reactjs.org/link/react-devtools
App.tsx:36 [PWA] Service Worker enregistré: https://491a337c-92c4-4cf2-a53a-939fa540a3f2-00-1bvd8b9oj088n.worf.replit.dev/
cache-buster.ts:37 Erreur lors de la vérification de mise à jour: SyntaxError: Unexpected token '<', "<!DOCTYPE "... is not valid JSON
checkForUpdates @ cache-buster.ts:37
/api/user:1 
        
        
       Failed to load resource: the server responded with a status of 401 (Unauthorized)
pwa-utils.ts:97 [PWA] Métriques de navigation: Object
sw.js:259 [SW] Service Worker actif - Version 1.1.0
chunk-RPCDYKBN.js?v=e2d56fd9:521 Warning: React has detected a change in the order of Hooks called by IdeaDetailModal. This will lead to bugs and errors if not fixed. For more information, read the Rules of Hooks: https://reactjs.org/link/rules-of-hooks

   Previous render            Next render
   ------------------------------------------------------
1. useState                   useState
2. useEffect                  useEffect
3. useContext                 useContext
4. useState                   useState
5. useState                   useState
6. useContext                 useContext
7. useState                   useState
8. useEffect                  useEffect
9. useCallback                useCallback
10. useSyncExternalStore      useSyncExternalStore
11. useCallback               useCallback
12. useContext                useContext
13. useState                  useState
14. useEffect                 useEffect
15. useCallback               useCallback
16. useSyncExternalStore      useSyncExternalStore
17. useCallback               useCallback
18. undefined                 useEffect
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

    at IdeaDetailModal (https://491a337c-92c4-4cf2-a53a-939fa540a3f2-00-1bvd8b9oj088n.worf.replit.dev/src/components/idea-detail-modal.tsx:29:43)
    at section
    at AdminSection (https://491a337c-92c4-4cf2-a53a-939fa540a3f2-00-1bvd8b9oj088n.worf.replit.dev/src/components/admin-section.tsx:62:36)
    at main
    at div
    at HomePage (https://491a337c-92c4-4cf2-a53a-939fa540a3f2-00-1bvd8b9oj088n.worf.replit.dev/src/pages/home-page.tsx:26:45)
    at Route (https://491a337c-92c4-4cf2-a53a-939fa540a3f2-00-1bvd8b9oj088n.worf.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/wouter.js?v=e2d56fd9:323:16)
    at Switch (https://491a337c-92c4-4cf2-a53a-939fa540a3f2-00-1bvd8b9oj088n.worf.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/wouter.js?v=e2d56fd9:379:17)
    at Router
    at PWAWrapper (https://491a337c-92c4-4cf2-a53a-939fa540a3f2-00-1bvd8b9oj088n.worf.replit.dev/src/App.tsx?v=kOk32HibdbEadg8ahZL97:67:23)
    at AuthProvider (https://491a337c-92c4-4cf2-a53a-939fa540a3f2-00-1bvd8b9oj088n.worf.replit.dev/src/hooks/use-auth.tsx:26:32)
    at QueryClientProvider (https://491a337c-92c4-4cf2-a53a-939fa540a3f2-00-1bvd8b9oj088n.worf.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/@tanstack_react-query.js?v=e2d56fd9:2805:3)
    at App
printWarning @ chunk-RPCDYKBN.js?v=e2d56fd9:521
Show 1 more frame
Show less
2chunk-RPCDYKBN.js?v=e2d56fd9:11678 Uncaught Error: Rendered more hooks than during the previous render.
    at updateWorkInProgressHook (chunk-RPCDYKBN.js?v=e2d56fd9:11678:21)
    at updateEffectImpl (chunk-RPCDYKBN.js?v=e2d56fd9:12074:22)
    at updateEffect (chunk-RPCDYKBN.js?v=e2d56fd9:12099:18)
    at Object.useEffect (chunk-RPCDYKBN.js?v=e2d56fd9:12703:22)
    at useEffect (chunk-QCHXOAYK.js?v=e2d56fd9:1078:29)
    at IdeaDetailModal (idea-detail-modal.tsx:118:3)
    at renderWithHooks (chunk-RPCDYKBN.js?v=e2d56fd9:11548:26)
    at updateFunctionComponent (chunk-RPCDYKBN.js?v=e2d56fd9:14582:28)
    at beginWork (chunk-RPCDYKBN.js?v=e2d56fd9:15924:22)
    at HTMLUnknownElement.callCallback2 (chunk-RPCDYKBN.js?v=e2d56fd9:3674:22)
chunk-RPCDYKBN.js?v=e2d56fd9:14032 The above error occurred in the <IdeaDetailModal> component:

    at IdeaDetailModal (https://491a337c-92c4-4cf2-a53a-939fa540a3f2-00-1bvd8b9oj088n.worf.replit.dev/src/components/idea-detail-modal.tsx:29:43)
    at section
    at AdminSection (https://491a337c-92c4-4cf2-a53a-939fa540a3f2-00-1bvd8b9oj088n.worf.replit.dev/src/components/admin-section.tsx:62:36)
    at main
    at div
    at HomePage (https://491a337c-92c4-4cf2-a53a-939fa540a3f2-00-1bvd8b9oj088n.worf.replit.dev/src/pages/home-page.tsx:26:45)
    at Route (https://491a337c-92c4-4cf2-a53a-939fa540a3f2-00-1bvd8b9oj088n.worf.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/wouter.js?v=e2d56fd9:323:16)
    at Switch (https://491a337c-92c4-4cf2-a53a-939fa540a3f2-00-1bvd8b9oj088n.worf.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/wouter.js?v=e2d56fd9:379:17)
    at Router
    at PWAWrapper (https://491a337c-92c4-4cf2-a53a-939fa540a3f2-00-1bvd8b9oj088n.worf.replit.dev/src/App.tsx?v=kOk32HibdbEadg8ahZL97:67:23)
    at AuthProvider (https://491a337c-92c4-4cf2-a53a-939fa540a3f2-00-1bvd8b9oj088n.worf.replit.dev/src/hooks/use-auth.tsx:26:32)
    at QueryClientProvider (https://491a337c-92c4-4cf2-a53a-939fa540a3f2-00-1bvd8b9oj088n.worf.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/@tanstack_react-query.js?v=e2d56fd9:2805:3)
    at App

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://reactjs.org/link/error-boundaries to learn more about error boundaries.
logCapturedError @ chunk-RPCDYKBN.js?v=e2d56fd9:14032
Show 1 more frame
Show less
chunk-RPCDYKBN.js?v=e2d56fd9:9129 Uncaught Error: Rendered more hooks than during the previous render.
    at updateWorkInProgressHook (chunk-RPCDYKBN.js?v=e2d56fd9:11678:21)
    at updateEffectImpl (chunk-RPCDYKBN.js?v=e2d56fd9:12074:22)
    at updateEffect (chunk-RPCDYKBN.js?v=e2d56fd9:12099:18)
    at Object.useEffect (chunk-RPCDYKBN.js?v=e2d56fd9:12703:22)
    at useEffect (chunk-QCHXOAYK.js?v=e2d56fd9:1078:29)
    at IdeaDetailModal (idea-detail-modal.tsx:118:3)
    at renderWithHooks (chunk-RPCDYKBN.js?v=e2d56fd9:11548:26)
    at updateFunctionComponent (chunk-RPCDYKBN.js?v=e2d56fd9:14582:28)
    at beginWork (chunk-RPCDYKBN.js?v=e2d56fd9:15924:22)
    at beginWork$1 (chunk-RPCDYKBN.js?v=e2d56fd9:19753:22)